kubernetes/apps/syncthing/backendtrafficpolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: syncthing
  namespace: syncthing
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: syncthing
  timeout:
    http:
      requestTimeout: "0s"
