kubernetes/apps/syncthing/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: syncthing
  namespace: syncthing
spec:
  parentRefs:
    - name: tailscale-gateway
      namespace: tailscale
  hostnames:
    - "sync.local.fordkuppp.me"
  rules:
    - backendRefs:
        - name: syncthing
          port: 8384
